# weiss-human-play-api

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: human_play_deployment.md
python/weiss_rl/: __init__.py  cli.py  model.py
python/weiss_rl/actors/: __init__.py  actor_worker.py  actor_worker_helpers.py
python/weiss_rl/artifacts/: __init__.py  layout.py  manifest.py  reproducibility.py
python/weiss_rl/config/: __init__.py  common_models.py  curriculum_league_models.py  environment_models.py  evaluation_models.py  hashing.py  models.py  overrides.py  parse.py  parsing_utils.py  sections_core.py  sections_curriculum.py  sections_environment.py  sections_evaluation.py  sections_league.py  sections_model.py  sections_reproducibility.py  sections_training.py  sections_training_focus.py  seed_sets.py  study.py  study_models.py  training_models.py
python/weiss_rl/core/: __init__.py  action_catalog.py  card_table.py  legal_actions.py  masking.py  observation_layout.py  schedules.py  simulator_contract.py  spec.py  termination_reason.py
python/weiss_rl/diagnostics/: __init__.py  action_diagnostics.py  artifact_hygiene.py  artifact_scan_entrypoint.py  b2_audit_aggregation.py  b2_disagreement_audit.py  checkpoint_family_bias_entrypoint.py  cli_banner.py  core_placeholder_check_entrypoint.py  heuristic_sanity_scan_entrypoint.py  job_telemetry.py  learning_progress.py  learning_progress_artifacts.py  learning_progress_guard.py  learning_progress_metrics.py  profile_fixtures.py  profile_structured_hotpaths_entrypoint.py  profile_train_job_entrypoint.py  repo_hygiene.py  repo_hygiene_check_entrypoint.py  reward_component_probe_entrypoint.py  tensorboard_logger.py  training_logger.py  trajectory_audit_compare_entrypoint.py  (+1 more)
tests/: README.md  __init__.py
tests/weiss_rl/: test_human_play.py
(+604 files in other folders)
