[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "weiss-schwarz-rl"
version = "0.1.0"
description = "Thesis RL training and evaluation pipeline for Weiss Schwarz."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.11.0",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "matplotlib==3.10.1",
    "tensorboard>=2.18,<3",
    "psutil>=6,<7",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "pre-commit>=4,<5",
    "types-PyYAML>=6.0.12.20241230,<7",
    "vulture>=2.16,<3",
]
sim = [
    "weiss-sim>=1.2.0,<2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
exclude = ["weiss_rl.tests", "weiss_rl.tests.*"]

[tool.setuptools.package-data]
weiss_rl = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/weiss_rl"]
norecursedirs = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "run_logs",
    "runs",
    "temp",
    "vast_artifacts",
]
markers = [
    "simulator: tests that require weiss-sim 1.2.0 or a compatible sibling checkout",
    "artifact: tests that exercise artifact and docs contracts",
    "slow: longer-running smoke or integration tests",
]
